# gor

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  renovate.json
.github/workflows/: pre-commit.yaml  rust.yml
src/: ast.rs  error.rs  eval.rs  lib.rs  main.rs  module.pest
src/ast/: binop.rs  expression.rs  mod.rs  name.rs  shortcircuitop.rs  test.rs  uniop.rs
src/ast/name/: test.rs
src/eval/: mod.rs  test.rs
src/parse/: mod.rs
tests/: compile_tests.rs
tests/compile/: hello.go  missing_module.go
