[package]
name = "gor"
version = "0.1.0"
edition = "2021"
rust-version = "1.61"

authors = ["Andrew Aylett <andrew@aylett.co.uk>"]
license = "Apache-2.0"
description = "An implementation of Go, as an interpreter written in Rust"
repository = "https://github.com/andrewaylett/gor"

[workspace]
members = [".", "packages/*"]
default-members = [".", "packages/*"]

[dependencies]
gor-ast = { version="0.1.0", path="packages/ast" }
gor-parse = { version="0.1.0", path="packages/parse" }
gor-eval = { version="0.1.0", path="packages/eval" }
gor-loader = { version="0.1.0", path="packages/loader" }
gor-core = { version="0.1.0", path="packages/core" }
gor-linker = { version="0.1.0", path="packages/linker" }

tokio = { version = "^1.29.1", features = ["full", "tracing"] }
pest = "2.7.2"
pest_derive = "2.7.2"

anyhow = "1.0.74"
thiserror = "1.0.46"

lazy_static = "1.4.0"
futures = "0.3.28"

structopt = "0.3.26"

[dev-dependencies]
pretty_assertions = "1.4.0"

[build-dependencies]
lazy_static = "1.4.0"
regex = "1.9.3"
